; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/gh60/satan/keymaps/gipsy-king/extr_keymap.c_add_char.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/gh60/satan/keymaps/gipsy-king/extr_keymap.c_add_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cursor_pos = common dso_local global i32 0, align 4
@RGBLED_NUM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_char(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @cursor_pos, align 4
  %4 = load i32, i32* @RGBLED_NUM, align 4
  %5 = sub nsw i32 %4, 1
  %6 = icmp eq i32 %3, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  store i32 0, i32* @cursor_pos, align 4
  %8 = call i32 (...) @reset_chars()
  br label %24

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load i32, i32* @cursor_pos, align 4
  %14 = call i32 @rgblight_sethsv_at(i32 0, i32 0, i32 0, i32 %13)
  br label %21

15:                                               ; preds = %9
  %16 = call i32 (...) @rgblight_get_hue()
  %17 = call i32 (...) @rgblight_get_sat()
  %18 = call i32 (...) @rgblight_get_val()
  %19 = load i32, i32* @cursor_pos, align 4
  %20 = call i32 @rgblight_sethsv_at(i32 %16, i32 %17, i32 %18, i32 %19)
  br label %21

21:                                               ; preds = %15, %12
  %22 = load i32, i32* @cursor_pos, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* @cursor_pos, align 4
  br label %24

24:                                               ; preds = %21, %7
  ret void
}

declare dso_local i32 @reset_chars(...) #1

declare dso_local i32 @rgblight_sethsv_at(i32, i32, i32, i32) #1

declare dso_local i32 @rgblight_get_hue(...) #1

declare dso_local i32 @rgblight_get_sat(...) #1

declare dso_local i32 @rgblight_get_val(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
